# repo-distiller

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/repo_distiller/: cli.py  config.py  core.py  formatter.py
tests/: test_config.py  test_core.py  test_formatter.py
