[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-distiller"
version = "0.2.0"
description = "Convert a code repository into a single text file for LLM prompting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sergei Sergienko" }]

dependencies = ["typer>=0.9", "PyYAML>=6.0", "pathspec>=0.11"]

[project.scripts]
repo-distiller = "repo_distiller.cli:app"

[project.urls]
Homepage = "https://github.com/Divelix/repo-distiller"
Repository = "https://github.com/Divelix/repo-distiller"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
